// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/platform/bitbucket-server/index endpoint with no path addAssignees() does not throw 1`] = `undefined`;

exports[`modules/platform/bitbucket-server/index endpoint with no path addReviewers does not throw 1`] = `undefined`;

exports[`modules/platform/bitbucket-server/index endpoint with no path addReviewers throws 1`] = `"Response code 405 (Method Not Allowed)"`;

exports[`modules/platform/bitbucket-server/index endpoint with no path addReviewers throws on invalid reviewers 1`] = `"Response code 409 (Conflict)"`;

exports[`modules/platform/bitbucket-server/index endpoint with no path deleteLAbel() does not throw 1`] = `undefined`;

exports[`modules/platform/bitbucket-server/index endpoint with no path findPr() has pr 1`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "number": 5,
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path getBranchPr() has pr 1`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "number": 5,
  "reviewers": [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path getPr() canRebase 1`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "number": 5,
  "reviewers": [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path getPr() canRebase 2`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "number": 5,
  "reviewers": [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path getPr() canRebase 3`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "number": 5,
  "reviewers": [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path getPr() gets a PR 1`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "number": 5,
  "reviewers": [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path getPr() gets a closed PR 1`] = `
{
  "bodyStruct": {
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  },
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "hasReviewers": false,
  "number": undefined,
  "reviewers": [],
  "sourceBranch": undefined,
  "state": "merged",
  "targetBranch": undefined,
  "title": undefined,
  "version": 0,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path getPrList() has pr 1`] = `
[
  {
    "bodyStruct": {
      "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
    },
    "createdAt": 1547853840016,
    "number": 5,
    "sourceBranch": "userName1/pullRequest5",
    "state": "open",
    "targetBranch": "master",
    "title": "title",
    "version": 1,
  },
]
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path initPlatform() should init 1`] = `
{
  "endpoint": "https://stash.renovatebot.com/",
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path initRepo() generates URL if API does not contain clone links 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "a37c027c633002a25e0c86a9d82fba2350ee8028133b94fe4df032f052f6f331a0d6d1c189d25c4cf9f436816fbe35d7086556ef2bdd2b2b54c82fde035c2bb6",
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path initRepo() uses http url from API with injected auth if http url in API response 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "a37c027c633002a25e0c86a9d82fba2350ee8028133b94fe4df032f052f6f331a0d6d1c189d25c4cf9f436816fbe35d7086556ef2bdd2b2b54c82fde035c2bb6",
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path initRepo() uses ssh url from API if http not in API response 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "a37c027c633002a25e0c86a9d82fba2350ee8028133b94fe4df032f052f6f331a0d6d1c189d25c4cf9f436816fbe35d7086556ef2bdd2b2b54c82fde035c2bb6",
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path initRepo() works 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "a37c027c633002a25e0c86a9d82fba2350ee8028133b94fe4df032f052f6f331a0d6d1c189d25c4cf9f436816fbe35d7086556ef2bdd2b2b54c82fde035c2bb6",
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path massageMarkdown() returns diff files 1`] = `"**foo**bartext"`;

exports[`modules/platform/bitbucket-server/index endpoint with no path massageMarkdown() sanitizes HTML comments in the body 1`] = `
"---

- [ ] If you want to rebase/retry this PR, click this checkbox
- [ ] <a href="/some/link">Update renovate/renovate to 16.1.2</a>

---

Empty comment.

Followed by some information.
"
`;

exports[`modules/platform/bitbucket-server/index endpoint with no path updatePr() throws 1`] = `"Response code 405 (Method Not Allowed)"`;

exports[`modules/platform/bitbucket-server/index endpoint with path addAssignees() does not throw 1`] = `undefined`;

exports[`modules/platform/bitbucket-server/index endpoint with path addReviewers does not throw 1`] = `undefined`;

exports[`modules/platform/bitbucket-server/index endpoint with path addReviewers throws 1`] = `"Response code 405 (Method Not Allowed)"`;

exports[`modules/platform/bitbucket-server/index endpoint with path addReviewers throws on invalid reviewers 1`] = `"Response code 409 (Conflict)"`;

exports[`modules/platform/bitbucket-server/index endpoint with path deleteLAbel() does not throw 1`] = `undefined`;

exports[`modules/platform/bitbucket-server/index endpoint with path findPr() has pr 1`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "number": 5,
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path getBranchPr() has pr 1`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "number": 5,
  "reviewers": [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path getPr() canRebase 1`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "number": 5,
  "reviewers": [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path getPr() canRebase 2`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "number": 5,
  "reviewers": [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path getPr() canRebase 3`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "number": 5,
  "reviewers": [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path getPr() gets a PR 1`] = `
{
  "bodyStruct": {
    "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
  },
  "createdAt": 1547853840016,
  "displayNumber": "Pull Request #5",
  "hasReviewers": true,
  "number": 5,
  "reviewers": [
    "userName2",
  ],
  "sourceBranch": "userName1/pullRequest5",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
  "version": 1,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path getPr() gets a closed PR 1`] = `
{
  "bodyStruct": {
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  },
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "hasReviewers": false,
  "number": undefined,
  "reviewers": [],
  "sourceBranch": undefined,
  "state": "merged",
  "targetBranch": undefined,
  "title": undefined,
  "version": 0,
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path getPrList() has pr 1`] = `
[
  {
    "bodyStruct": {
      "hash": "7980dafc4eb6f0c79278fd929d3e8e5954b32b68ae118a22565c7c369fc2f591",
    },
    "createdAt": 1547853840016,
    "number": 5,
    "sourceBranch": "userName1/pullRequest5",
    "state": "open",
    "targetBranch": "master",
    "title": "title",
    "version": 1,
  },
]
`;

exports[`modules/platform/bitbucket-server/index endpoint with path initPlatform() should init 1`] = `
{
  "endpoint": "https://stash.renovatebot.com/",
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path initRepo() generates URL if API does not contain clone links 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "5cf9fcad2424fb392c571e8c68ae75132e5db7a1f74d89235bda8dbac1c6c40c45997bace756898176a8b898aa1580b0345dc6272284ecf18a055536402ffcf7",
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path initRepo() uses http url from API with injected auth if http url in API response 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "5cf9fcad2424fb392c571e8c68ae75132e5db7a1f74d89235bda8dbac1c6c40c45997bace756898176a8b898aa1580b0345dc6272284ecf18a055536402ffcf7",
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path initRepo() uses ssh url from API if http not in API response 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "5cf9fcad2424fb392c571e8c68ae75132e5db7a1f74d89235bda8dbac1c6c40c45997bace756898176a8b898aa1580b0345dc6272284ecf18a055536402ffcf7",
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path initRepo() works 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "5cf9fcad2424fb392c571e8c68ae75132e5db7a1f74d89235bda8dbac1c6c40c45997bace756898176a8b898aa1580b0345dc6272284ecf18a055536402ffcf7",
}
`;

exports[`modules/platform/bitbucket-server/index endpoint with path massageMarkdown() returns diff files 1`] = `"**foo**bartext"`;

exports[`modules/platform/bitbucket-server/index endpoint with path massageMarkdown() sanitizes HTML comments in the body 1`] = `
"---

- [ ] If you want to rebase/retry this PR, click this checkbox
- [ ] <a href="/some/link">Update renovate/renovate to 16.1.2</a>

---

Empty comment.

Followed by some information.
"
`;

exports[`modules/platform/bitbucket-server/index endpoint with path updatePr() throws 1`] = `"Response code 405 (Method Not Allowed)"`;
